UI Design - Chnages are done for Dynamic Widgets Module

--- a/App/ClientApp/src/app/layout/widget-dynamic/add/add.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/add/add.component.html
@@ -346,10 +346,12 @@
                     <div class="col-sm-3 col-md-3 col-lg-3">
                       <select class="form-control">
                         <option>Select</option>
-                        <option>Between</option>
-                        <option>Equals</option>
+                        <option>Equals to</option>
+                        <option>Not equals to</option>
                         <option>Less than</option>
                         <option>Greater than</option>
+                        <option>Contains</option>
+                        <option>Not Contains</option>
                       </select>
                     </div>
                     <div class="col-sm-3 col-md-3 col-lg-3">
@@ -367,7 +369,7 @@
                   <!--repeat start-->
                   <div class="row form-group">
                     <div class="col-sm-2 col-md-2 col-lg-2">
-                      <select class="form-control">
+                      <select class="form-control pl-1">
                         <option>Select</option>
                         <option selected>AND</option>
                         <option>OR</option>
@@ -384,10 +386,12 @@
                     <div class="col-sm-3 col-md-3 col-lg-3">
                       <select class="form-control">
                         <option>Select</option>
-                        <option>Between</option>
-                        <option selected>Equals</option>
+                        <option selected>Equals to</option>
+                        <option>Not equals to</option>
                         <option>Less than</option>
                         <option>Greater than</option>
+                        <option>Contains</option>
+                        <option>Not Contains</option>
                       </select>
                     </div>
                     <div class="col-sm-3 col-md-3 col-lg-3">
@@ -405,7 +409,7 @@
                   <!--repeat start-->
                   <div class="row form-group">
                     <div class="col-sm-2 col-md-2 col-lg-2">
-                      <select class="form-control" disabled>
+                      <select class="form-control pl-1" disabled>
                         <option>Select</option>
                         <option selected>AND</option>
                         <option>OR</option>
@@ -422,21 +426,16 @@
                     <div class="col-sm-3 col-md-3 col-lg-3">
                       <select class="form-control" disabled>
                         <option>Select</option>
-                        <option selected>Between</option>
-                        <option>Equals</option>
+                        <option>Equals to</option>
+                        <option>Not equals to</option>
                         <option>Less than</option>
-                        <option>Greater than</option>
+                        <option selected>Greater than</option>
+                        <option>Contains</option>
+                        <option>Not Contains</option>
                       </select>
                     </div>
                     <div class="col-sm-3 col-md-3 col-lg-3">
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <input type="text" class="form-control" value="2" disabled />
-                        </div>
-                        <div class="col-sm-6">
-                          <input type="text" class="form-control" value="10" disabled />
-                        </div>
-                      </div>
+                      <input type="text" class="form-control" readonly value="12" />
                     </div>
                     <div class="col-sm-1 col-md-1 col-lg-1">
                       <div class="action-btns btn-tbl-action">
