--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -25,37 +25,71 @@
         <table mat-table [dataSource]="dataSource" matSort class="table-cust">
           <!-- Position Column -->
           <ng-container matColumnDef="Product">
-            <th class="width30 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Product Type </th>
+            <th class="width17 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Product Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.Product}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Entity">
-            <th class="width30 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Entity Type </th>
+            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Entity Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <span *ngIf="dynamicwidget.Entity==null">-</span>
               <span *ngIf="dynamicwidget.Entity!=null">{{dynamicwidget.Entity}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Widget">
-            <th class="width25 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Widget Type </th>
+            <th class="width8 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Widget Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <span *ngIf="dynamicwidget.Widget==null">-</span>
               <span *ngIf="dynamicwidget.Widget!=null">{{dynamicwidget.Widget}} </span>
             </td>
           </ng-container>
+          <ng-container matColumnDef="Owner">
+            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+            <td mat-cell *matCellDef="let dynamicwidget">
+              <span *ngIf="dynamicwidget.Owner==null">-</span>
+              <span *ngIf="dynamicwidget.Owner!=null">{{dynamicwidget.Owner}} </span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="PublishedBy">
+            <th class="width13 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+            <td mat-cell *matCellDef="let dynamicwidget">
+              <span *ngIf="dynamicwidget.PublishedBy==null">-</span>
+              <span *ngIf="dynamicwidget.PublishedBy!=null">{{dynamicwidget.PublishedBy}} </span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="PublishedDate">
+            <th class="width11 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>  Published Date </th>
+            <td mat-cell *matCellDef="let dynamicwidget">
+              <span *ngIf="dynamicwidget.Widget==null">-</span>
+              <span *ngIf="dynamicwidget.Widget!=null">{{dynamicwidget.PublishedDate}} </span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="Status">
+            <th class="width8 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
+            <td mat-cell *matCellDef="let dynamicwidget">
+              <span class="badge badge-primary p-1" *ngIf="dynamicwidget.Status=='New'">{{dynamicwidget.Status}}</span>
+              <span class="badge badge-success p-1" *ngIf="dynamicwidget.Status=='Published'">{{dynamicwidget.Status}}</span>
+            </td>
+          </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width15 ip-w-35" mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let role">
+            <th class="width17 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let dynamicwidget">
               <div class="action-btns btn-tbl-action">
                 <button type="button" id="btnViewRole" title="View Role" (click)="navigateToView()">
                   <span class="fa fa-file-text-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole" title="Update Role">
+                <button type="button" id="btnUpdateRole"  *ngIf="dynamicwidget.Status=='New'" title="Update">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole" title="Update Role">
+                <button type="button" id="btnUpdateRole" title="Delete">
                   <span class="fa fa-trash"></span>
+                </button>
+                <button type="button" title="Publish" id="btnPublish" *ngIf="dynamicwidget.Status=='New'"><span class="fa fa-share"></span></button>
+                <button type="button" title="Clone" id="btnClone" *ngIf="dynamicwidget.Status=='Published'">  <span class="fa fa-clone"></span>
+                </button>
+                <button type="button" title="Preview" id="btnPreview">
+                  <span class="fa fa-eye"></span>
                 </button>
               </div>
             </td>
@@ -77,12 +111,12 @@
       <div class="filter-body-left d-flex flex-column stylescrollbar">
         <div class="form-group">
           <label>Product Type</label>
-         <select class="form-control">
-           <option>Select</option>
-           <option>Common</option>
-           <option>Saving</option>
-           <option>Current</option>
-         </select>
+          <select class="form-control">
+            <option>Select</option>
+            <option>Common</option>
+            <option>Saving</option>
+            <option>Current</option>
+          </select>
         </div>
         <div class="form-group">
           <label>Entity Type</label>
@@ -103,6 +137,46 @@
             <option>Bar Graph</option>
             <option>Pie Chart</option>
           </select>
+        </div>
+        <div class="form-group">
+          <label>Owner</label>
+          <input type="text" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Status</label>
+          <select class="form-control">
+            <option>Select</option>
+            <option>New</option>
+            <option>Published</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Start Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate"
+                   placeholder="Please select start date">
+            <span [owlDateTimeTrigger]="dt" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <!--<div class="text-danger" *ngIf="filterFromDateError">
+            {{filterFromDateErrorMessage}}
+          </div>-->
+        </div>
+        <div class="form-group">
+          <label>End Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate"
+                   placeholder="Please select end date">
+            <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <!--<div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
+          </div>-->
         </div>
       </div>
       <!--[ngClass]="filterClass"-->
