UI Design - Dynamic Widgets Changes for Theme integration anf HTML editor and Added new screen for Theme Configuration in settings

--- a/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
@@ -118,11 +118,10 @@
                   <label class="custom-control-label dir-rtl" for="opDaily">
                     <div class="form-inline" style="margin-top:-5px">
                       <div class="form-group xs-frm">
-                        <label for="" class="dir-ltr">Day</label>
+                        <label for="" class="dir-ltr">Repeat every</label>
                         <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0">
-                        <label> of every </label>
                         <input type="number" id="" class="form-control mx-sm-2 width20 sm-w-50" min="0" max="12">
-                        <label> month(s) </label>
+                        <label> day(s) </label>
                       </div>
                     </div>
                   </label>
