--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -153,8 +153,7 @@
         <div class="form-group">
           <label>Start Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate"
-                   placeholder="Please select start date">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate">
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
@@ -167,8 +166,7 @@
         <div class="form-group">
           <label>End Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate"
-                   placeholder="Please select end date">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate">
             <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
