--- a/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
@@ -310,6 +310,118 @@
 
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <label> Theme</label>
+            <div>Custome Theme</div>
+            </div>
+          </div>
+          <div class="card bg-light border-card form-group">
+            <!--<div class="card-header bg-white">
+      <label class="mb-0">Common Properties</label>
+    </div>-->
+            <div class="card-body">
+              <div class="row">
+                <div class="col-sm-4">
+                  <label>Foreground Color</label>
+                  <input type="color" class="form-control" disabled />
+                </div>
+                <div class="col-sm-4">
+                  <label>Background Color</label>
+                  <input type="color" class="form-control" disabled />
+                </div>
+              </div>
+              <div class="row mt-2" *ngIf="isSelected('LineGraph') || isSelected('BarGraph') || isSelected('PieChart')">
+                <div class="col-sm-6">
+                  <label>Selected Color Theme</label>
+                  <div class="d-flex justify-content-start">
+                    <div class="clr-box" style="background-color:#342ead"></div>
+                    <div class="clr-box" style="background-color:#EA6227"></div>
+                    <div class="clr-box" style="background-color:#f2a51a"></div>
+                    <div class="clr-box" style="background-color:#b9ebcc"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-light border-card form-group">
+            <div class="card-header bg-white">
+              <label class="mb-0">Title Font</label>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-3 col-sm-6">
+                  <label> Color</label>
+                  <input type="color" class="form-control" disabled  />
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Size</label>
+                  <div>10px</div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Weight</label>
+                 <div>Bold</div>
+                </div>
+                <div class="col-md-3 col-sm-6 form-group">
+                  <label> Type</label>
+                 <div>Type 01</div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="card bg-light border-card form-group">
+            <div class="card-header bg-white">
+              <label class="mb-0">Header/Label Font</label>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-3 col-sm-6">
+                  <label> Color</label>
+                  <input type="color" class="form-control" disabled />
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Size</label>
+                  <div>10px</div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Weight</label>
+                  <div>Bold</div>
+                </div>
+                <div class="col-md-3 col-sm-6 form-group">
+                  <label> Type</label>
+                  <div>Type 01</div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="card bg-light border-card form-group">
+            <div class="card-header bg-white">
+              <label class="mb-0">Data Font</label>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-3 col-sm-6">
+                  <label> Color</label>
+                  <input type="color" class="form-control" disabled />
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Size</label>
+                  <div>10px</div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                  <label> Weight</label>
+                  <div>Bold</div>
+                </div>
+                <div class="col-md-3 col-sm-6 form-group">
+                  <label> Type</label>
+                  <div>Type 01</div>
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
 
         <div class="col-sm-5">
