UI Design - Theme Config error

--- a/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
+++ b/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
@@ -5,7 +5,7 @@
   </div>
   <form>
     <div class="card border-0 mb-2 card-shadow">
-      <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails">
+      <div class="card-body">
         <div class="row">
           <div class="col-sm-12">
             <label>Select Theme</label>
